# ckb-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  dashboards  dashboards.md
.github/workflows/: release.yml
backup/: dashboard.rs  subscribe.rs
backup/ckb-suite-rpc/src/: rpc.rs
backup/config/: aggron.toml
backup/docs/: alerts.md  metrics.md  schema.sql
backup/docs/dashboards/: Alerting.json  Canonical Chain.json  Error Logs.json  Home.json  Node Distribution.json  Reorganization.json  TransactionTransition.json
backup/docs/dashboards/WIP/: CKB.json  Network.json  Synchronization.json  Verifier.json
backup/scripts/: alerts.py  setup.sql
backup/topic/: network_topology.rs  reorganization.rs  subscribe_new_transaction.rs  subscribe_proposed_transaction.rs  tx_transition.rs
ckb-suite-rpc/: Cargo.toml
ckb-suite-rpc/src/: lib.rs  rpc.rs
ckb_app_config/: aggron.toml  lina.toml
config/: aggron.toml  lina.toml
configs/: mainnet.toml  testnet.toml
dashboard/grafana/: epoch.js  peer.json  pool.json
dashboard/grafana/sql/: peer-country-distribution.sql  peer-version-distribution.sql
dashboards/: Network Propagation.json  chain.json  network_prober.json
dashboards/WIP/: CKB Metrics.json  FreshTransactions.json  Peers.json  Pool.json  System.json  ckb-net-monitor.json
dashboards/sourced-influxdb/: Alerting.json  MainChain.json  NetworkProber.json
dashboards/sourced-promethreus/: FreshTransactions.json  Network.json  Peers.json.back  Pool.json  Synchronization.json  Verifier.json
docker/: .env.example  Dockerfile  collector.yaml  docker-compose.yaml  monitor.yaml
docker/ckb-mainnet/: ckb.toml
docker/ckb-testnet/: ckb.toml
docker/grafana/etc/grafana/: grafana.ini
docker/grafana/etc/grafana/provisioning/dashboards/: config.yaml
docker/grafana/etc/grafana/provisioning/dashboards/CKB/: block.json  cell.json  ckb_built_in_metrics.json  compact_block.json  epoch.json  miner.json  peer.json  pool.json  rejected_transaction.json  transaction.json
docker/grafana/etc/grafana/provisioning/datasources/: PostgreSQL-ckb.yaml  Prometheus-ckb.yaml
docker/prometheus/etc/prometheus/: prometheus.yml
docs/: alert.md  alert_note.md  alerts.md  configurations.md  draft.md  pgtables.md  record-state-or-event.md
scripts/: alerts.py  index.py
specs/: ckb.mainnet.toml  ckb.testnet.toml
src/: app_config.rs  chain.rs  config.rs  entry.rs  get_version.rs  main.rs  measurement.rs  network.rs  on_chain.rs  schema.sql  serie.rs  subscribe.rs  table.rs  topology.rs
src/analyzer/: canonical_chain.rs  fork.rs  log_watcher.rs  main_chain.rs  mod.rs  network_probe.rs  network_propagation.rs  network_topology.rs  pool_transaction.rs  reorganization.rs  tail_log.rs
src/role/: mod.rs  network_propagation.rs  pool_transaction.rs  transaction_tracer.rs
src/topic/: canonical_chain.rs  canonical_chain_growth.rs  canonical_chain_state.rs  cell_crawler.rs  chain_crawler.rs  chain_transaction_crawler.rs  compact_block_crawler.rs  epoch_crawler.rs  logs.rs  mod.rs  network_crawler.rs  network_propagation.rs  network_topology.rs  pattern_logs.rs  peer_collector.rs  peer_crawler.rs  peer_scanner.rs  pool_crawler.rs  reorganization.rs  retention_transaction_crawler.rs  subscribe_new_tip_header.rs  subscribe_new_transaction.rs  subscribe_proposed_transaction.rs  subscribe_rejected_transaction.rs  transaction_tracer.rs  tx_transition.rs
src/util/: bootnodes.rs  crossbeam_channel_to_tokio_channel.rs  find_available_port.rs  forward_tokio1_channel.rs  get_network_identifier.rs  ipinfo.rs  log_watcher.rs  mod.rs  multiaddr.rs  select_last_block_number_in_influxdb.rs
