[package]
name = "ckb-analyzer"
version = "0.0.10"
license = "MIT"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
description = "CKBAnalyzer"
homepage = "https://github.com/keroro520/ckb-analyzer"

[dependencies]
ckb-network = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-logger = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-app-config = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-async-runtime = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-logger-config = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-logger-service = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
tentacle-multiaddr = { version = "0.3.0" }

crossbeam = { version = "0.8.0" }
chrono = { version = "0.4.19" }
log = { version = "0.4.11" }
simple_logger = { version = "1.11.0", default-features = false }
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4", "runtime"] }
ipinfo = { version = "0.2.0" }
ckb-testkit = { git = "https://github.com/nervosnetwork/ckb-integration-test", rev = "6062924b0e2243a5dea7400b9d9ae6f83072c7a6" }
clap = { version = "2" }
url = "1.7.2"
