[package]
name = "ckb-analyzer"
version = "0.1.2"
license = "MIT"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
description = "CKBAnalyzer"
homepage = "https://github.com/keroro520/ckb-analyzer"

[dependencies]
ckb-logger-config = "0.101.0"
ckb-logger-service = "0.101.0"

crossbeam = { version = "0.8.0" }
chrono = { version = "0.4.19" }
log = { version = "0.4.11" }
simple_logger = { version = "1.11.0", default-features = false }
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4", "runtime"] }
ipinfo = { version = "0.2.0" }
ckb-testkit = { version = "0.0.1", features = ["with_subscribe"] }
clap = { version = "2" }
url = "1.7.2"
futures = "0.3"
p2p = { version="0.4.0-alpha.2", package="tentacle", features = ["upnp", "parking_lot"] }
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
regex = "1.5.4"
dotenv = "0.15.0"
lru = "0.6"
lazy_static = "1.4"
