[package]
name = "ckb-suite-rpc"
version = "0.37.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
ckb-jsonrpc-types = { version = "0.37.0" }
ckb-types = { version = "0.37.0" }
ckb-util = { version = "0.37.0" }
hyper = "0.11.27"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
