[package]
name = "ckb-suite-rpc"
version = "0.0.3"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "ckb rpc client implementation"
homepage = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-jsonrpc-types = { version = "0.42.0" }
ckb-types = { version = "0.42.0" }
ckb-util = { version = "0.42.0" }
hyper = "0.11.27"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
lru = { version = "0.6.1" }
